2006-09-21  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Fix input_session XML
	to export_session SQLITE failure by ensuring 
	entities are created in the backend at the same
	time as the book.

2006-09-19  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Fix update
	mode, avoid "database is locked" from sqlite
	by separating SELECT from UPDATE/INSERT.

2006-09-17  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c,
	qof/deprecated.h,
	qof/kvpframe.c,
	qof/kvpframe.h,
	qof/kvputil-p.h,
	qof/kvputil.c,
	qof/kvputil.h,
	qof/qofbackend.c,
	qof/qofsql.c : Beginning the update of KVP
	and addition of KVP_TYPE_BOOLEAN.

	* qof/qofutil.c,
	qof/qofutil.h,
	qof/deprecated.c,
	qof/deprecated.h : move qof_util_double_compare 
	from kvp (deprecate old name double_compare).

2006-09-14  Neil Williams <linux@codehelp.co.uk>

	* qof/qofinstance.h,
	qof/qof.h,
	qof/qofbook.h,
	qof/qofquerycore.h,
	qof/kvputil-p.h,
	qof/qofsql.h,
	qof/Makefile.am,
	qof/qofinstance.c,
	qof/kvpframe.c,
	qof/qofbook-p.h	: Fixing kvp filenames.

2006-09-13  Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	NEWS,
	doc/doxygen.cfg.in,
	make-potfiles.in,
	backend/Makefile.am,
	backend/README,
	website/index.html,
	website/hacking.html : Explaining decision to stall
	the libqof-backend-gda0 module until such time as
	libgda supports creating tables in new or existing
	data sources.

2006-09-13  Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	backend/Makefile.am,
	backend/sqlite/Makefile.am : Fix detection 
	of sqlite and backend selection options.

	* backend/file/qsf-backend.c : Avoid closing
	a test file if open failed.

	* doc/Makefile.am : Ensure doxy symlink is
	cleaned up.

	* po/en_GB.po : New strings.

	* qof/kvp-util.c : Tweak.
	* qof/qofbookmerge.c : Tweak.

	* qof/qoferror.c : Clarify variable names.
	Improve handling of errors from deprecated 
	code.

	* qof/qofsession.c : Improve error handling