@@ -1,5 +1,17 @@
 2006-09-21  Neil Williams <linux@codehelp.co.uk>
 
+	* backend/sqlite/qof-sqlite.c : Check path is
+	writeable before trying to create a database.
+	* qof/qoferror.c,
+	 qof/qofsession-p.h : Use the session error Id 
+	and message strings for times that no backend
+	is available.
+	* qof/qofsession.c : Improve error string.
+
+	* po/en_GB.po : New string for permission error.
+
+2006-09-21  Neil Williams <linux@codehelp.co.uk>
+
 	* backend/sqlite/qof-sqlite.c : Fix input_session XML
 	to export_session SQLITE failure by ensuring 
 	entities are created in the backend at the same
